# TTKMusicPlayer

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  LICENSE  MusicPlayer.pro  MusicPlayer.rc  README.md  README_cn.md  README_tc.md  TTKMusicPlayer.pri  TTKMusicPlayer.pro  TTKMusicPlayer.rc  TTKVersion.pri  musicapplication.cpp  musicapplication.h  musicapplicationmain.cpp  musicapplicationobject.cpp  musicapplicationobject.h  musicbackgroundskindialog.cpp  musicbackgroundskindialog.h  musicbottomareawidget.cpp  musicbottomareawidget.h  musicequalizerdialog.cpp  musicequalizerdialog.h  musicglobal.h  musicleftareawidget.cpp  musicleftareawidget.h  musiclocalsongsearch.cpp  musicmarquee.cpp  musicmarquee.h  musicpreviewlabel.cpp  musicpreviewlabel.h  musicprivate.h  musicrightareawidget.cpp  musicrightareawidget.h  musicsettingwidget.cpp  musicsettingwidget.h  musicsongsearchonlinewidget.cpp  musicsongsearchonlinewidget.h  (+21 more)
TTKApp/: CMakeLists.txt  TTKApp.pro  TTKApp.rc  musicapplicationmain.cpp  musiclocalpeer.cpp  musiclocalpeer.h  musiclockedfile.h  musiclockedfile_unix.cpp  musiclockedfile_win.cpp  musicrunapplication.cpp  musicrunapplication.h  musicrunglobaldefine.h  musicrunmain.cpp  musicrunobject.cpp  musicrunobject.h
TTKCommon/: CMakeLists.txt  TTKCommon.pri  TTKCommon.pro  config.pri  musicglobal.h  ttkcompat.h  ttkconfig.h  ttkdesktopwrapper.cpp  ttkdesktopwrapper.h  ttkglobal.h  ttkglobaldefine.h  ttklogger.h  ttkmoduleexport.h  ttknumberdefine.h  ttkobject.h  ttkprivate.h  ttkqtcompat.h  ttkqtglobal.h  ttkqtobject.h  ttkqtwrapper.h  ttksingleton.h  ttkversion.h
TTKConfig/: CMakeLists.txt  TTKConfig.pro  TTKConfig.rc  musicconfigdefine.h  musicconfigglobaldefine.h  musicconfigmodule.cpp  musicconfigmodule.h  musicconfigobject.cpp  musicconfigobject.h
TTKCore/: CMakeLists.txt  TTKCore.pri  TTKCore.pro  TTKCore.rc  musicapplication.cpp  musicapplication.h  musicapplicationobject.cpp  musicapplicationobject.h  musicbottomareawidget.cpp  musicbottomareawidget.h  musicleftareawidget.cpp  musicleftareawidget.h  musicrightareawidget.cpp  musicrightareawidget.h  musictopareawidget.cpp  musictopareawidget.h
TTKModule/: CMakeLists.txt  TTKCore.rc  TTKModule.pri  TTKModule.pro  musicapplication.cpp  musicapplication.h  musicapplicationmodule.cpp  musicapplicationmodule.h  musicapplicationmpris.cpp  musicapplicationmpris.h  musicapplicationmprismodule.cpp  musicapplicationmprismodule.h  musicapplicationobject.cpp  musicapplicationobject.h  musicbottomareawidget.cpp  musicbottomareawidget.h  musicleftareawidget.cpp  musicleftareawidget.h  musicrightareawidget.cpp  musicrightareawidget.h  musictopareawidget.cpp  musictopareawidget.h
TTKMusicPlayer/: CMakeLists.txt  TTKMusicPlayer.pro  musicapplication.cpp  musicapplication.h  musicapplicationobject.cpp  musicbottomareawidget.cpp  musicbottomareawidget.h  musicleftareawidget.cpp  musicleftareawidget.h  musicrightareawidget.h  musictopareawidget.h
TTKQrc/: CMakeLists.txt  MusicApp.qrc  MusicPlayer.qrc  MusicPlayerShare.qrc  MusicPlayerUser.qrc  MusicPlayerVedio.qrc  MusicService.qrc  MusicThirdParty.qrc  MusicUpdate.qrc  TTKQrc.pro  TTKQrc.rc
TTKRun/: CMakeLists.txt  TTKRun.pro  musicrunglobaldefine.h
TTKService/: CMakeLists.txt  TTKService.pro  TTKService.rc  musicserviceapplication.cpp  musicserviceapplication.h  musicserviceglobaldefine.h  musicservicemain.cpp  musicserviceobject.cpp  musicserviceobject.h
TTKUi/: CMakeLists.txt  MusicApp.qrc  MusicPlayer.qrc  MusicThirdParty.qrc  TTKApp.qrc  TTKModule.qrc  TTKUi.pro  TTKUi.rc
TTKUpdate/: CMakeLists.txt  TTKUpdate.pro  TTKUpdate.rc  musicapplicationmain.cpp  musicupdatemainwindow.cpp  musicupdatemainwindow.h
core/: CMakeLists.txt  MusicCore.pri  musicabstractxml.cpp  musicabstractxml.h  musicbgthemedownload.cpp  musicbgthemedownload.h  musicbgthememanager.cpp  musicbgthememanager.h  musicconnectionpool.cpp  musicconnectionpool.h  musiccorealgorithm.cpp  musiccorealgorithm.h  musicdata2downloadthread.cpp  musicdata2downloadthread.h  musicdatadownloadthread.cpp  musicdatadownloadthread.h  musicdesktopwallpaperthread.cpp  musicdesktopwallpaperthread.h  musicdownloadmanagerthread.cpp  musicdownloadmanagerthread.h  musicdownloadquerythread.cpp  musicdownloadquerythread.h  musicdownloadstatuslabel.cpp  musicdownloadstatuslabel.h  musicdownloadthreadabstract.cpp  musicdownloadthreadabstract.h  musicequalizer.cpp  musicequalizer.h  musicfileinformation.cpp  musicfileinformation.h  musicitemdelegate.cpp  musicitemdelegate.h  musiclibexportglobal.h  musiclibzplay.h  musiclocalsongsmanagerthread.cpp  musiclocalsongsmanagerthread.h  musiclocalsongstablewidget.cpp  musiclocalsongstablewidget.h  musiclogger.h  musiclrcdownloadthread.cpp  (+35 more)
core-widget/: CMakeLists.txt  MusicWidget.pri  musicabstractmovedialog.cpp  musicabstractmovedialog.h  musicabstractmovewidget.cpp  musicabstractmovewidget.h  musicabstracttablewidget.cpp  musicabstracttablewidget.h  musicbackgroundlistwidget.cpp  musicbackgroundlistwidget.h  musicbackgroundremotewidget.cpp  musicbackgroundremotewidget.h  musicbackgroundskindialog.cpp  musicbackgroundskindialog.h  musicdownloadstatuslabel.cpp  musicdownloadstatuslabel.h  musicenhancedwidget.cpp  musicenhancedwidget.h  musicequalizerdialog.cpp  musicequalizerdialog.h  musicitemdelegate.h  musiclocalsongstablewidget.cpp  musiclocalsongstablewidget.h  musicmarquee.cpp  musicmarquee.h  musicmarqueewidget.cpp  musicmessagebox.cpp  musicmessagebox.h  musicmovedialogabstract.cpp  musicmovedialogabstract.h  musicmovewidgetabstract.cpp  musicmovewidgetabstract.h  musicpreviewlabel.cpp  musicpreviewlabel.h  musicprogresswidget.cpp  musicprogresswidget.h  musicqualitychoicewidget.cpp  musicqualitychoicewidget.h  musicquerytablewidget.cpp  musicquerytablewidget.cpp.autosave  (+25 more)
musicCore/: CMakeLists.txt  MusicCore.pri  musicabstractxml.cpp  musicabstractxml.h  musicbgthememanager.cpp  musicbgthememanager.h  musicconnectionpool.cpp  musicconnectionpool.h  musiccoremplayer.cpp  musiccoremplayer.h  musicequalizer.cpp  musicequalizer.h  musiclibexportglobal.h  musiclogger.h  (+17 more)
(+8845 files in other folders)
